# ChangeLog for app-text/sablotron
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/sablotron/ChangeLog,v 1.66 2009/06/20 11:47:10 flameeyes Exp $

  20 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -sablotron-1.0.1.ebuild:
  Remove old version (goodbye mips).

  19 Jun 2009; Brent Baude <ranger@gentoo.org> sablotron-1.0.3.ebuild:
  stable ppc64, bug 272244

  09 Jun 2009; Raúl Porcel <armin76@gentoo.org> sablotron-1.0.3.ebuild:
  arm/ia64/s390/sh stable wrt #272244

  07 Jun 2009; Jeroen Roovers <jer@gentoo.org> sablotron-1.0.3.ebuild:
  Stable for HPPA (bug #272244).

  07 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  sablotron-1.0.3.ebuild:
  Stable on alpha, bug #272088

  06 Jun 2009; nixnut <nixnut@gentoo.org> sablotron-1.0.3.ebuild:
  ppc stable #272244

  03 Jun 2009; Markus Meier <maekke@gentoo.org> sablotron-1.0.3.ebuild:
  amd64/x86 stable, bug #272244

  02 Jun 2009; Ferris McCormick <fmccor@gentoo.org> sablotron-1.0.3.ebuild:
  Sparc stable, Bug #272244.

  02 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -sablotron-1.0.2.ebuild:
  Remove old version.

  12 Dec 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  sablotron-1.0.3.ebuild:
  Simplify ebuild, make sure eautoreconf is executed during src_unpack
  rather than compile, remove doc USE flag since it was automagic, remove
  old workaround that is not useful right now.

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> sablotron-1.0.1.ebuild,
  sablotron-1.0.2.ebuild, sablotron-1.0.3.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  17 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/1.0.3-libsablot-expat.patch, sablotron-1.0.3.ebuild:
  Fix emerging with -Wl,--as-needed. Fixes bug #148412.

*sablotron-1.0.3 (14 Mar 2007)

  14 Mar 2007; Leonardo Boshell <leonardop@gentoo.org>
  +sablotron-1.0.3.ebuild:
  Version bump (bug #158131). Updated HOMEPAGE. Replaced einstall with "make